# crypto

./: .babelrc  .eslintrc.json  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Dockerfile.ci  LICENSE  README.md  binding.gyp  lib.d.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: node.js.yml
patches/: secp256k1+4.0.2.patch
src/: browser.test.ts  browser.ts  index.test.ts  index.ts  test.base.ts  types.ts
src/crypto-cpp/: CMakeLists.txt  presubmit.sh
src/crypto-cpp/src/starkware/algebra/: CMakeLists.txt
src/crypto-cpp/src/starkware/crypto/: CMakeLists.txt
src/crypto-cpp/src/starkware/crypto/ffi/: CMakeLists.txt  utils.cc
src/crypto-cpp/src/starkware/crypto/ffi/js/: CMakeLists.txt  crypto.js
src/crypto-cpp/src/starkware/starkex/: CMakeLists.txt
src/starkware/: constant_points.js  crypto.js  index.test.ts  index.ts  keyDerivation.js  signature.js  types.ts
src/starkware/cpp/: crypto.js  signature.js  useCpp.js
src/starkware/native/: keyDerivation.js  signature.js
starknet-crypto-napi/: Cargo.toml  package.json
starknet-crypto-napi/src/: error.rs  lib.rs
